Fixed mobile vertical scrolling. Fixed drawerlogs close button unreachable on small screens

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -12,7 +12,6 @@ body {
   text-rendering: optimizeLegibility;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
-  overflow: hidden;
   padding: 0 20px;
 }
 
